Implement user service